arch-host/etc/ip6tables.rules
*filter
:INPUT		DROP [0:0]
:FORWARD	DROP [0:0]
:OUTPUT		DROP [0:0]

-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp --dport 22 -j ACCEPT
-A INPUT -i br0 ! -s fd04::/96 -p ipv6-icmp                    -j ACCEPT
-A INPUT -i br0 ! -s fd04::/96 -p tcp --sport  20              -j ACCEPT -m comment --comment "ftp"
-A INPUT -i br0 ! -s fd04::/96 -p tcp             --dport   53 -j ACCEPT -m comment --comment "dns"
-A INPUT -i br0 ! -s fd04::/96 -p udp             --dport   53 -j ACCEPT -m comment --comment "dns"
-A INPUT -i br0 ! -s fd04::/96 -p udp             --dport  137 -j ACCEPT -m comment --comment "cifs"
-A INPUT -i br0 ! -s fd04::/96 -p udp             --dport  138 -j ACCEPT -m comment --comment "cifs"
-A INPUT -i br0 ! -s fd04::/96 -p udp             --dport  139 -j ACCEPT -m comment --comment "cifs"
-A INPUT -i br0 ! -s fd04::/96 -p udp             --dport  445 -j ACCEPT -m comment --comment "cifs"
-A INPUT -i br0 ! -s fd04::/96 -p udp --sport 546 --dport  547 -j ACCEPT -m comment --comment "dhcp"

-A FORWARD -m state --state ESTABLISHED,RELATED -j ACCEPT
#-A FORWARD -i br0 -o nat64 -p tcp --dport   80                    -j ACCEPT -m comment --comment "enabled for running pacman in vm"
-A FORWARD -i br0 -o br0                     ! -d fd04::/96       -j ACCEPT -m comment --comment "vm network"

-A OUTPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o br0 -j ACCEPT
-A OUTPUT -p ipv6-icmp        -j ACCEPT
-A OUTPUT -p tcp --dport   22 -j ACCEPT -m comment --comment "ssh"
-A OUTPUT -p tcp --dport   25 -j ACCEPT -m comment --comment "smtp"
-A OUTPUT -p tcp --dport   53 -j ACCEPT -m comment --comment "dns"
-A OUTPUT -p udp --dport   53 -j ACCEPT -m comment --comment "dns"
-A OUTPUT -p tcp --dport   80 -j ACCEPT -m comment --comment "http"
-A OUTPUT -p udp --dport  123 -j ACCEPT -m comment --comment "ntp"
-A OUTPUT -p tcp --dport  143 -j ACCEPT -m comment --comment "imap"
-A OUTPUT -p tcp --dport  389 -j ACCEPT -m comment --comment "ldap"
-A OUTPUT -p tcp --dport  443 -j ACCEPT -m comment --comment "https"
-A OUTPUT -p tcp --dport  445 -j ACCEPT -m comment --comment "cifs"
-A OUTPUT -p tcp --dport  636 -j ACCEPT -m comment --comment "ldaps"
-A OUTPUT -p tcp --dport  993 -j ACCEPT -m comment --comment "imaps"
-A OUTPUT -p tcp --dport 1433 -j ACCEPT -m comment --comment "sql server"
-A OUTPUT -p tcp --dport 1521 -j ACCEPT -m comment --comment "oracle"
-A OUTPUT -p tcp --dport 3389 -j ACCEPT -m comment --comment "rdesktop"
-A OUTPUT -p tcp --dport 8080 -j ACCEPT -m comment --comment "http"
-A OUTPUT -p tcp -j REJECT --reject-with tcp-reset
-A OUTPUT -p udp -j REJECT --reject-with icmp6-port-unreachable
-A OUTPUT        -j REJECT --reject-with icmp6-port-unreachable

COMMIT
