arch-host/etc/iptables.rules
*filter
:INPUT		DROP [0:0]
:FORWARD	DROP [0:0]
:OUTPUT		DROP [0:0]

-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp --dport 22 -j ACCEPT

-A FORWARD -m state --state ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -i nat64 -o eth0 -j ACCEPT

-A OUTPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -p tcp --dport  22 -j ACCEPT -m comment --comment "ssh"
-A OUTPUT -p tcp --dport  53 -j ACCEPT -m comment --comment "dns"
-A OUTPUT -p udp --dport  53 -j ACCEPT -m comment --comment "dns"
-A OUTPUT -p tcp --dport  80 -j ACCEPT -m comment --comment "http"
-A OUTPUT -p udp --dport 123 -j ACCEPT -m comment --comment "ntp"
-A OUTPUT -p tcp --dport 443 -j ACCEPT -m comment --comment "https"
-A OUTPUT -p tcp -j REJECT --reject-with tcp-reset
-A OUTPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT        -j REJECT --reject-with icmp-proto-unreachable

COMMIT

*nat
:PREROUTING	ACCEPT [0:0]
:OUTPUT		ACCEPT [0:0]
:POSTROUTING	ACCEPT [0:0]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
